# r-snes

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FINANCE.md  LEGAL.md  LICENSE  README.md  flake.nix  gg  logo_framebuffer.raw  plugin.lua  tarpaulin-report.html  tarpaulin.toml
.github/: pull_request_template.md
.github/workflows/: actions.yaml  gh-pages.yaml
APU/: Cargo.toml
APU/src/: apu.rs  cpu.rs  dsp.rs  lib.rs  main.rs  memory.rs  spc700.rs  timers.rs
APU/tests/: dsp_tests.rs  opcode_tests.rs  tests.rs
apu/: Cargo.toml
apu/src/: apu.rs  cpu.rs  dsp.rs  lib.rs  main.rs  memory.rs  timers.rs
apu/src/dsp/: adsr.rs  brr.rs  mod.rs  voice.rs
apu/tests/: adsr_tests.rs  apu_tests.rs  brr_tests.rs  dsp_tests.rs  memory_tests.rs  opcode_16bit_tests.rs  opcode_adressing_tests.rs  opcode_arithmetic_tests.rs  opcode_bit_tests.rs  opcode_cf_tests.rs  opcode_dp_alu_tests.rs  opcode_flags_tests.rs  opcode_jump_misc_tests.rs  opcode_rotate_tests.rs  opcode_shift_tests.rs  opcode_tests.rs  voice_tests.rs
bus/: Cargo.toml
bus/src/: bus.rs  constants.rs  io.rs  lib.rs  main.rs  memory_region.rs  wram.rs
bus/src/io/: dma.rs  io.rs  mod.rs  others.rs  ppu.rs
bus/src/rom/: error.rs  header.rs  mapping_mode.rs  mod.rs  rom.rs  test_rom.rs
bus/src/rom/header/: cartridge_hardware.rs  country.rs  header.rs  mapping_mode.rs  mod.rs  rom_speed.rs
common/: Cargo.toml
common/src/: lib.rs  snes_address.rs  u16_split.rs
cpu/: Cargo.toml  README.md  cputest-basic-report.txt  cputest-full-report.txt
cpu/docs/: README.md
cpu/instr_metalang_procmacro/: Cargo.toml
cpu/instr_metalang_procmacro/src/: lib.rs  parser.rs  var_width_op.rs
cpu/src/: cpu.rs  instr_tab.rs  lib.rs  reg.rs  registers.rs
cpu/src/instrs/: algorithms.rs  arithmetic.rs  branches.rs  flags.rs  instr_tab.rs  interrupts.rs  jumps.rs  loads.rs  mod.rs  prelude.rs  stack.rs  stores.rs  test_prelude.rs  transfers.rs  uncategorised.rs
memory_map/: Cargo.toml
memory_map/src/: bus.rs  main.rs  rom.rs
memory_map/src/rom/: error.rs  mapping.rs  mapping_mode.rs  mod.rs  rom.rs
plugins/: Cargo.toml  plan.txt  plugin.lua
plugins/perm_tree_node_derive/: Cargo.toml
plugins/perm_tree_node_derive/src/: lib.rs
plugins/perm_tree_node_derive/tests/: lib.rs
plugins/permission_derive_macro/: Cargo.toml
plugins/permission_derive_macro/src/: lib.rs
plugins/permission_derive_macro/tests/: lib.rs
plugins/src/: derive_alias.rs  lib.rs  main.rs  perm_tree.rs  permission.rs  plugin.rs
plugins/src/perm_tree/: filesystem.rs
plugins/src/permission/: helpers.rs
plugins/strict_partial_ord_derive/: Cargo.toml
plugins/strict_partial_ord_derive/src/: lib.rs
plugins/strict_partial_ord_derive/tests/: lib.rs
ppu/: Cargo.toml
ppu-v2/: Cargo.toml
ppu-v2/src/: cgram.rs  constants.rs  main.rs  mod.rs  ppu.rs  registers.rs  vram.rs
ppu/src/: a.rs  a_tests.rs  bus.rs  cgram.rs  color.rs  constants.rs  lib.rs  main.rs  mod.rs  oam.rs  ppu.rs  registers.rs  renderer.rs  sprite.rs  tile.rs  tile_loader.rs  utils.rs  vram.rs  window.rs  write_twice.rs
ppu/src/rendering/: mod.rs  mode_0.rs  mode_1.rs  renderer.rs
ppu/src/tests/: mod.rs  ppu_cgram.rs  ppu_oam.rs  ppu_render.rs  ppu_tile.rs  ppu_vram.rs
ppu/tests/: ppu_cgram.rs  ppu_main.rs  ppu_render.rs  ppu_tile.rs  ppu_vram.rs
product_order/: Cargo.toml
product_order/product_order_derive/: Cargo.toml
product_order/product_order_derive/src/: lib.rs
product_order/product_order_derive/tests/: lib.rs
product_order/src/: lib.rs
site/: index.html  tarpaulin-report.html
src/: app.rs  gui.rs  lib.rs  main.rs  main_bck.rs  ppu.rs  rsnes.rs  tile.rs  utils.rs
src/rsnes/: rsnes_plugin.rs
tests/: ppu_tile.rs  ppu_vram.rs
