[package]
name = "r-snes"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "common",
    "ppu",
    "cpu",
    "apu",
    "cpu/instr_metalang_procmacro",
    "bus",
]

[dependencies]
bus = { version = "0.1.0", path = "./bus"}
cpu = { version = "0.1.0", path = "./cpu"}
ppu = { version = "0.1.0", path = "./ppu"}
apu = { version = "0.1.0", path = "./apu"}

sdl2 = { version = "0.38.0", features = ["bundled"] }
rfd = "0.14"
