[package]
name = "r-snes"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "common",
    "ppu",
    "cpu",
    "apu",
    "cpu/instr_metalang_procmacro",
    "bus",
]

[dependencies]
common = { version = "0.1.0", path = "./common"}
bus = { version = "0.1.0", path = "./bus"}
cpu = { version = "0.1.0", path = "./cpu"}
ppu = { version = "0.1.0", path = "./ppu"}
apu = { version = "0.1.0", path = "./apu"}
rfd = "0.17.2"

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.38.0", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
sdl2 = { version = "0.38.0"}
