[package]
name = "r-snes"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "apu",
    "bus",
    "common",
    "cpu",
    "cpu/instr_metalang_procmacro",
    "plugins",
    "plugins/permission_derive_macro",
    "plugins/strict_partial_ord_derive",
    "plugins/perm_tree_node_derive",
    "ppu",
]

# common dependencies used across the workspace
[workspace.dependencies]
piccolo = { git = "https://github.com/kyren/piccolo" }

[dependencies]
common = { version = "0.1.0", path = "./common"}
bus = { version = "0.1.0", path = "./bus"}
cpu = { version = "0.1.0", path = "./cpu"}
ppu = { version = "0.1.0", path = "./ppu"}
apu = { version = "0.1.0", path = "./apu"}

rfd = "0.17.2"
clap = { version = "^4.6.0", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.38.0", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
sdl2 = { version = "0.38.0"}

[features]
cli = ["dep:clap"]
default = ["cli"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
