[lib]
proc-macro = true

[package]
name = "instr_metalang_procmacro"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = [ "full" ] }

[dev-dependencies]
prettyplease = "0.2.37"
syn = { version = "2.0", features = ["full", "extra-traits"]}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
